# FantAI

./: .gitignore  README.md  TODO.md  app.py  pyproject.toml  webapp.py
data/: Rose_pappalardo.xlsx  listone_2025_26.csv  mapping_nomi.csv  quotazioni_fantacalcio.csv  user_data.json  user_state.json
data/fantacalcio/: all_seasons.csv  stats_2020-21.csv  stats_2021-22.csv  stats_2022-23.csv  stats_2023-24.csv  stats_2024-25.csv  stats_2025-26.csv
src/: backtest.py  cli.py  config.py  data.py  elo.py  fantacalcio.py  features.py  league_roster.py  listone.py  model.py  next_match.py  quotazioni.py  sosfanta.py  valuation.py  xgb_model.py
templates/: index.html
