[project]
name = "fantai"
version = "0.1.0"
description = "FantAI - Assistente Asta Fantacalcio Mantra"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.2.3",
    "numpy==2.1.3",
    "scipy==1.14.1",
    "scikit-learn==1.6.0",
    "requests==2.32.3",
    "rich==13.9.4",
    "xgboost==2.1.3",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "ipython==8.30.0"]

[project.scripts]
aibet = "src.cli:main"
